[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["mrd_storage_client"]

[tool.setuptools_scm]
write_to = "mrd_storage_client/_version.py"
write_to_template = "# -*- coding: utf-8 -*-\n\n__version__ = '{version}'\n"
version_scheme = "release-branch-semver"

[project]
name = "mrd-storage-client"
readme = "README.md"
dynamic = ["version"]
description = "a python client for the mrd storage server"
authors = [{ name = "Alexander Fyrdahl", email = "alexander.fyrdahl@gmail.com" }]
maintainers = [{ name = "Alexander Fyrdahl", email = "alexander.fyrdahl@gmail.com" }]
requires-python = ">=3.7"
dependencies = [
    "requests==2.28.1",
    "requests-toolbelt==0.10.0",
    "urllib3>=1.21.1,<1.27"
]
keywords = ["mrd", "storage", "client"]

[project.urls]
homepage = "https://github.com/fyrdahl/mrd-storage-client"
documentation = "https://github.com/fyrdahl/mrd-storage-client"
repository = "https://github.com/fyrdahl/mrd-storage-client"
