[build-system]
requires = [
  "setuptools>=64",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mrd-storage-client"
readme = "README.md"
version = "0.1.0"
description = "a python client for the mrd storage server"
authors = [{ name = "Alexander Fyrdahl", email = "alexander.fyrdahl@gmail.com" }]
maintainers = [{ name = "Alexander Fyrdahl", email = "alexander.fyrdahl@gmail.com" }]
requires-python = ">=3.7"
dependencies = [
    "requests==2.28.1",
    "requests-toolbelt==0.10.0",
    "urllib3>=1.21.1,<1.27"
]
keywords = ["mrd", "storage", "client"]

[project.urls]
homepage = "https://github.com/fyrdahl/mrd-storage-client"
documentation = "https://github.com/fyrdahl/mrd-storage-client"
repository = "https://github.com/fyrdahl/mrd-storage-client"
